--- a/presentation/src/main/res/layout/history_layout.xml
+++ b/presentation/src/main/res/layout/history_layout.xml
@@ -46,7 +46,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_height="40dp"/>
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/history_list_rv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
